--- a/xQuick-One/Hover-beforeNafter/index.html
+++ b/xQuick-One/Hover-beforeNafter/index.html
@@ -4,9 +4,24 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link href="./styles.css">
+	<link href="./styles.css" rel="stylesheet">
+
+	<style>
+		
+	</style>
 </head>
+
 <body>
-	
+	<h1> My Element</h1>
+	<p>The Content of my element</p>
+
+	<br>
+
+	<h2>New Element</h2>
+	<p class="p">
+		<!-- ::before   -comes before content in the tag-->
+		Content for new element
+		<!-- ::after 	-comes after content in the tag-->
+	</p>
 </body>
 </html>
